fix: hide resizer to use scrollbar element

--- a/src/react/components/pages/editorPage/editorPage.scss
+++ b/src/react/components/pages/editorPage/editorPage.scss
@@ -301,6 +301,7 @@ canvas {
 }
 
 .Resizer {
+  display: none;
   background: #000;
   opacity: 0.2;
   z-index: 1;
